--- a/index.html
+++ b/index.html
@@ -165,28 +165,23 @@
         中国电子学会、中国纺织工程学会、IEEE I&M学会 <b>会员</b><br/>
         Wireless Communications & Mobile Computing  <b>编委</b><br/>
         Frontiers in Communications and Networks <b>编委</b><br/>
-        IEEE ICEICT 22' <b>分会主席</b><br/>
-        IEEE ICEICT 23' <b>分会主席、TPC Member</b><br/>
+        IEEE ICEICT 22'、23' <b>Session Chair、TPC Member</b><br/>
         IEEE COM MAG、TITS、TVT、TIM、TNSM、TAI等权威期刊 审稿人</p> 
         </font>
         
       <p><b> <font size="3">荣誉奖励</font></b><br>
         <font size="2">
-        2023年:  JIMSE Global Young Scientist Award <br/>
-         <!--  2023年:  “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  -->
+        2023年: UCIC-SER Global Young Scientist Award <br/>
+        2023年: “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  
         2023年: 东华大学教学成果奖一等奖（2/8）<br/>
-       <!--
         2022年: 江苏省“双创人才” <br/>
-          -->
         2022年: 东华大学学生就业创业工作促进奖 <br/>
         2022年: 上海市计算机学会教学成果奖二等奖 (3/5) <br/>
-        <!--
-          2021年: 姑苏领军人才 <br/>
-          -->
+        2021年: 姑苏领军人才 <br/>
         2021年: 长三角G60科创走廊突出贡献人才团队（领衔）<br/>
         2021年: 全国大学生电子设计竞赛上海赛区优秀指导教师奖 <br/>
         2021年: 东华大学群众体育先进个人 <br/>
-        2018年:  UPM Premio Extraordinarios de Doctorado <br/></p>
+        2018年: UPM Premio Extraordinarios de Doctorado <br/></p>
         </font>
         
       <p><b> <font size="3">主讲课程</font></b><br>
