--- a/index.html
+++ b/index.html
@@ -99,19 +99,22 @@
           获UPM硕士和博士学位(Cum Laude), University of South Carolina 访问学者。长期从事通信与信息系统学科教学及无线通信感知、身联网可穿戴计算等前沿方向的科学研究工作。
           发表学术论文40余篇（一作/通讯SCI论文18篇），Google学术引用400余次。</font>     
         -->
-      <p><b><font size="2"> 教育背景 </font></b><br>
-        2012-2016	Universidad Politécnica de Madrid 信息系统工程  博士(Cum Laude)<br/>
+      <p align="left">
+        <b><font size="2"> 教育背景 </font></b><br>
+        2012-2016	Universidad Politécnica de Madrid 信息系统工程  硕士、博士(Cum Laude)<br/>
         2010-2012	合肥工业大学  信号与信息处理   硕士研究生(公派出国)<br/>
         2005-2009	安徽大学  通信工程  本科</p>
         
-      <p><b><font size="2"> 工作经历 </font></b><br>
-        2019-至今	东华大学 信息科学与技术学院                                  <b>  副教授</b><br/>
+     <p align="left">
+       <b><font size="2"> 工作经历 </font></b><br>
+        2019-至今	东华大学 信息科学与技术学院                                   <b>  副教授</b><br/>
         2018-2019	东华大学 信息科学与技术学院                                   <b>  讲师</b><br/>
         2017-2018	Ericsson                                                    <b>  Algorithm Engineer</b><br/>
         2016-2017	中国科学院 上海微系统与信息技术研究所                          <b>  助理研究员</b><br/>
         2016-2016	University of South Carolina                                <b>  Visiting Scholar</b></p>     
          
-      <p><b><font size="2">学术服务 </font></b><br>
+      <p align="left">
+        <b><font size="2">学术服务 </font></b><br>
         <font size="2">
       · 中国电子学会、中国纺织工程学会、IEEE I&M学会 <b>会员</b><br/>
       · Wireless Communications & Mobile Computing  <b>编委</b><br/>
@@ -119,7 +122,8 @@
       · IEEE ICEICT 22'、23' <b>Session Chair、TPC Member</b><br/>
       · IEEE COM MAG、TITS、TVT、TIM、TNSM、TAI等权威期刊 审稿人</p> 
         </font>   
-      <p><b> <font size="2">荣誉奖励</font></b><br>
+    <p align="left">
+      <b> <font size="2">荣誉奖励</font></b><br>
         <font size="2">
         2023年: UCIC-SER Global Young Scientist Award <br/>
         2023年: “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  
