--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@
         -->
       <p align="left">
         <b><font size="2"> 教育背景 </font></b><br>
-        2012-2016	Universidad Politécnica de Madrid 信息系统工程  硕士、博士(Cum Laude)<br/>
-        2010-2012	合肥工业大学  信号与信息处理   硕士研究生(公派出国)<br/>
-        2005-2009	安徽大学  通信工程  本科</p>
+        2012-2016	Universidad Politécnica de Madrid <br/>
+        ETSIST  硕士、博士(Cum Laude)<br/>
+        2010-2012	合肥工业大学  <br/>
+        计算机与信息学院   硕士研究生(公派出国)<br/>
+        2005-2009	安徽大学  <br/>
+        电子学院 通信工程  本科</p>
         
      <p align="left">
        <b><font size="2"> 工作经历 </font></b><br>
