--- a/index.html
+++ b/index.html
@@ -119,11 +119,10 @@
       <p align="left">
         <b><font size="2">学术服务 </font></b><br>
         <font size="2">
-      · 中国电子学会、中国纺织工程学会、IEEE I&M学会 <b>会员</b><br/>
-      · Wireless Communications & Mobile Computing  <b>编委</b><br/>
-      · Frontiers in Communications and Networks <b>编委</b><br/>
-      · IEEE ICEICT 22'、23' <b>Session Chair、TPC Member</b><br/>
-      · IEEE COM MAG、TITS、TVT、TIM、TNSM、TAI等权威期刊 审稿人</p> 
+      · 中国电子学会、中国纺织工程学会、IEEE <b>会员</b><br/>
+      · WCMC、FCN  <b>期刊编委</b><br/>
+      · IEEE ICEICT 22'、23' <b>Session Chair、TPC</b><br/>
+      · IEEE TITS、TIM、TNSM、TAI等权威期刊 审稿人</p> 
         </font>   
     <p align="left">
       <b> <font size="2">荣誉奖励</font></b><br>
