--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
       · 中国电子学会、中国纺织工程学会、IEEE <b>会员</b><br/>
       · WCMC、FCN  <b>期刊编委</b><br/>
       · IEEE ICEICT 22'、23' <b>Session Chair、TPC</b><br/>
-      · IEEE TITS、TIM、TNSM、TAI等权威期刊 审稿人</p> 
+      · IEEE TITS、TIM、TNSM、TAI等期刊审稿人</p> 
         </font>   
     <p align="left">
       <b> <font size="2">荣誉奖励</font></b><br>
         <font size="2">
-        2023年: UCIC-SER Global Young Scientist Award <br/>
-        2023年: “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  
+        2023年: UCIC-SER Young Scientist Award <br/>
+        2023年: “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  <br/>
         2023年: 东华大学教学成果奖一等奖（2/8）<br/>
         2022年: 江苏省“双创人才” <br/>
         2022年: 东华大学学生就业创业工作促进奖 <br/>
