--- a/index.html
+++ b/index.html
@@ -127,15 +127,14 @@
     <p align="left">
       <b> <font size="2">荣誉奖励</font></b><br>
         <font size="2">
-        2023年: UCIC-SER Young Scientist Award <br/>
-        2023年: “纺织之光”中国纺织工业联合会纺织高等教育教学成果奖二等奖（2/8）  <br/>
-        2023年: 东华大学教学成果奖一等奖（2/8）<br/>
-        2022年: 江苏省“双创人才” <br/>
-        2022年: 东华大学学生就业创业工作促进奖 <br/>
-        2022年: 上海市计算机学会教学成果奖二等奖 (3/5) <br/>
-        2021年: 姑苏领军人才 <br/>
-        2021年: 长三角G60科创走廊突出贡献人才团队（领衔）<br/>
-        2021年: 全国大学生电子设计竞赛上海赛区优秀指导教师奖 <br/>
+        2023年UCIC-SER青年科学家奖<br/>
+        2022年江苏省“双创人才” <br/>
+        2021年长三角G60科创走廊突出贡献人才团队<br/>
+        2021年姑苏领军人才 <br/>
+        2022年东华大学学生就业创业工作促进奖 <br/>
+        2023年中国纺织工业联合会教学成果奖二等奖（2/8）  <br/>
+        2023年东华大学教学成果奖一等奖（2/8）<br/>
+        2021年: 全国大学生电赛上海赛区优秀指导教师奖 <br/>
         2021年: 东华大学群众体育先进个人 <br/>
         2018年: UPM Premio Extraordinarios de Doctorado <br/></p>
         </font>
