--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
       <p align="left">
         <b><font size="2"> 教育背景 </font></b><br>
         2012-2016	 <b> Universidad Politécnica de Madrid</b> <br/>
-        ETSIST  硕士、<b> 博士</b>(Cum Laude)<br/>
+        ETSIST &nbsp 硕士、<b> 博士</b>(Cum Laude)<br/>
         2010-2012	<b> 合肥工业大学</b>  <br/>
-        计算机与信息学院   硕士研究生(公派出国)<br/>
+        计算机与信息学院 &nbsp 硕士研究生(公派出国)<br/>
         2005-2009	<b>安徽大学</b>  <br/>
-        电子学院 通信工程  <b>本科</b></p>
+        电子学院 &nbsp 通信工程 &nbsp <b>本科</b></p>
         
      <p align="left">
        <b><font size="2"> 工作经历 </font></b><br>
