--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         2021年长三角G60科创走廊突出贡献人才团队<br/>
         2021年姑苏领军人才 <br/>
         2022年东华大学学生就业创业工作促进奖 <br/>
-        2023年中国纺织工业联合会教学成果奖二等奖（2/8）  <br/>
-        2023年东华大学教学成果奖一等奖（2/8）<br/>
-        2021年: 全国大学生电赛上海赛区优秀指导教师奖 <br/>
-        2021年: 东华大学群众体育先进个人 <br/>
-        2018年: UPM Premio Extraordinarios de Doctorado <br/></p>
+        2023年中国纺织工业联合会教学成果奖二等奖(排2)<br/>
+        2023年东华大学教学成果奖一等奖(排2)<br/>
+        2021年全国大学生电赛上海赛区优秀指导教师奖 <br/>
+        2021年东华大学群众体育先进个人 <br/>
+        UPM Premio Extraordinarios de Doctorado <br/></p>
         </font>
         
         </header>
