--- a/index.html
+++ b/index.html
@@ -103,18 +103,16 @@
         <b><font size="2"> 教育背景 </font></b><br>
         2012-2016	 <b> Universidad Politécnica de Madrid</b> <br/>
         ETSIST &nbsp 硕士、<b> 博士</b>(Cum Laude)<br/>
-        2010-2012	<b> 合肥工业大学</b>  <br/>
-        计算机与信息学院 &nbsp 硕士研究生(公派出国)<br/>
-        2005-2009	<b>安徽大学</b>  <br/>
-        电子学院 &nbsp 通信工程 &nbsp <b>本科</b></p>
+        2010-2012	<b>合肥工业大学</b> &nbsp 硕士研究生(公派出国)<br/>
+        2005-2009	<b>安徽大学</b> &nbsp 通信工程 &nbsp <b>本科</b></p>
         
      <p align="left">
        <b><font size="2"> 工作经历 </font></b><br>
-        2019-至今	东华大学 信息科学与技术学院                      <b>  副教授</b><br/>
-        2018-2019	东华大学 信息科学与技术学院                      <b>  讲师</b><br/>
-        2017-2018	Ericsson                                       <b>  Algorithm Engineer</b><br/>
-        2016-2017	中国科学院 上海微系统所                          <b>  助理研究员</b><br/>
-        2016	University of South Carolina                       <b>  Visiting Scholar</b></p>     
+        2019-至今	东华大学 信息科学与技术学院  &nbsp                <b>  副教授</b><br/>
+        2018-2019	东华大学 信息科学与技术学院  &nbsp                <b>  讲师</b><br/>
+        2017-2018	Ericsson &nbsp&nbsp&nbsp&nbsp                   <b>  Algorithm Engineer</b><br/>
+        2016-2017	中国科学院 上海微系统所 &nbsp                     <b>  助理研究员</b><br/>
+        2016	University of South Carolina                        <b>  Visiting Scholar</b></p>     
          
       <p align="left">
         <b><font size="2">学术服务 </font></b><br>
