--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         2021年长三角G60科创走廊突出贡献人才团队<br/>
         2021年姑苏领军人才 <br/>
         2022年东华大学学生就业创业工作促进奖 <br/>
-        2023年中国纺织工业联合会教学成果奖二等奖(排2)<br/>
-        2023年东华大学教学成果奖一等奖(排2)<br/>
-        2021年全国大学生电赛上海赛区优秀指导教师奖 <br/>
+        2023年中国纺织工业联合会教学成果奖二等奖<br/>
+        2023年东华大学教学成果奖一等奖<br/>
+        2021年全国大学生电赛上海赛区优秀指导教师<br/>
         2021年东华大学群众体育先进个人 <br/>
         UPM Premio Extraordinarios de Doctorado <br/></p>
         </font>
@@ -153,6 +153,7 @@
        </font>
         
       <p><b> <font size="3">代表论文 </font> </b><br>
+        发表学术论文30余篇（一作/通讯SCI论文18篇），<a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> 引用450余次 <br/>
         <font size="0.2">
         [1] <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140, no. , pp. 311-320, 2023. (<b>中科院Top</b>)<br/>
         [2]	<b>L. Zhang</b>, X. Chu, M. Zhai, “Machine Learning-Based Integrated Wireless Sensing and Positioning for Cellular Network,” <b><i>IEEE Transactions on Instrumentation and Measurement</i></b>, vol. 72, pp. 1-11, 2023, Art no. 5501011. (<b>中科院二区</b>)<br/>
@@ -164,9 +165,8 @@
         [8]	M. Zhai, <b>L. Zhang*(通讯作者)</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” <b><i>IEEE Microwave and Wireless Components Letters</i></b>, vol. 30, no. 3, pp. 225-228, 2020 (<b>中科院二区</b>)<br/>
         ...
        <br>
-       发表学术论文30余篇（一作/通讯SCI论文18篇），Google学术引用450余次 <br/>
-          A COMPLETE LIST: <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> <br/>
-        <!-- 
+        <!--  A COMPLETE LIST: <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> <br/>
+        
         ·	<b>L. Zhang</b>, Y. Zhu, M. Jiang, Y. Wu, K. Deng, Q. Ni, “Body Temperature Monitoring for Regular COVID-19 Prevention Based on Human Daily Activity Recognition,” <b><i>Sensors</i></b>, vol. 21, no. 22, pp. 7540-7558, 2021 (<b>SCI, IF=3.847</b>)<br/>
         ·	<b>L. Zhang</b>, Q. Ni, G. Zhang, M. Zhai, J. Moreno, C. Briso, “Random Forests-enabled Context Detections for Long-term Evolution Network for Railway,” <b><i>IET Microwaves Antennas & Propagation</i></b>, Vol. 13, Issue 8, p. 1080-1086, 2019 (<b>SCI, IF=2.036</b>)<br/>
         ·	<b>L. Zhang</b>, J. Moreno, C. Briso, “Experimental Characterization and Modelling of Intra-Car Communications Inside High-Speed Trains,” <b><i>IET Microwaves Antennas & Propagation</i></b>, Vol. 13, no. 8, p. 1060 -1064, 2019 (<b>SCI, IF=2.036</b>)<br/>
