--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
          <!-- 电子邮箱： <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a>
         <a href="https://www.researchgate.net/profile/Lei-Zhang-338" class="author-social" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
         <br> --> 
-        <font size="0.5">上海市松江区人民北路2999号2号学院楼618 <br/>
-          E-MAIL: lei.zhang [AT] dhu.edu.cn
-        <br><br/>
+        <font size="0.5"><b>E-MAIL: lei.zhang [AT] dhu.edu.cn</b<br><br/>
   
       <!-- 
       <p text-justify:inter-ideograph>    
