--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p align="left">
         <b><font size="2"> 教育背景 </font></b><br>
         2012-2016	 <b> Universidad Politécnica de Madrid</b> <br/>
-        ETSIS de Telecomunicación &nbsp 硕士、<b> 博士</b>(Cum Laude)<br/>
+        ETSIS de Telecomunicación &nbsp <b> 博士</b>(Cum Laude)<br/>
         2010-2012	<b>合肥工业大学</b> &nbsp 硕士研究生(公派出国)<br/>
         2005-2009	<b>安徽大学</b> &nbsp 通信工程 &nbsp <b>本科</b></p>
         
