--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
        </font></p>  
         
       <p><b> <font size="3">代表论文 </font> </b><br>
-        发表学术论文30余篇（一作/通讯SCI论文18篇），<a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> 引用450余次 <br/>
+        发表学术论文30余篇，一作/通讯SCI论文18篇，<a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> 引用450余次 <br/>
         <br>
         <font size="0.2">
         [1] <b>L. Zhang</b>, P. Lin, “Reinforcement Learning Based Energy-Neutral Operation for Hybrid EH Powered TBAN,” <b><i>Future Generation Computer Systems</i></b>, vol. 140, no. , pp. 311-320, 2023. (<b>中科院Top</b>)<br/>
