--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>东华大学-张磊</title>
+    <title>Lei Zhang @ Donghua University</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -83,8 +83,8 @@
     <div class="wrapper">
       <header align="center">
           <img src="profile-3.jpg" height="210" width="150" alt="Lei Zhang"></h3> 
-      <h1> <b><font size="4">张磊</font></b>  <font size="2">副教授、硕导</font> </h1>
-        <b>东华大学 信息科学与技术学院</b><br/>
+      <h1> <b><font size="4">Lei Zhang</font></b>  <font size="2">Ph.D., A/Prof.</font> </h1>
+        <b>College of Information Sciences and Technology, Donghua University</b><br/>
          <!-- 电子邮箱： <a href="mailto:lei.zhang@dhu.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i></a>
         <a href="https://www.researchgate.net/profile/Lei-Zhang-338" class="author-social" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
         <br> --> 
