--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
       <p align="left">
        <b><font size="2"> EDUCATION </font></b><br>
        <font size="0.5">
-       <b> Ph.D.(Cum Laude)</b>, Universidad Politécnica de Madrid, 2016<br/>
+       <b> Ph.D.</b>(Cum Laude), Universidad Politécnica de Madrid, 2016<br/>
        <b> M.Sc.</b>, Universidad Politécnica de Madrid, 2013<br/>
        <b> B.D.</b>，Anhui University, 2009</font><br/>
         
      <p align="left">
        <b><font size="2"> EXPERIENCES </font></b><br>
        <font size="0.5">
-        <b> Associate Professor </b>, Donghua University, 2019-NOW<br/>
+        <b> Associate Prof. </b>, Donghua University, 2019-NOW<br/>
         <b> Lecturer </b>, Donghua University, 2018-2019 <br/>
         <b> Algorithm Engineer</b>, Ericsson, 2017-2018 <br/>
-        <b> RA Professor</b>, SIMIT-Chinese Academy of Sciences, 2016-2017 <br/>
+        <b> RA Prof.</b>, SIMIT-Chinese Academy of Sciences, 2016-2017 <br/>
         <b> Visiting Scholar</b>, University of South Carolina, 2016 </font><br/>    
          
       <p align="left">
