--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
       <section>     
       <p><b> <font size="3"> PROJECTS </font> </b><br>
         <font size="2">
-      <b> National Natural Science Foundation of China (General Program:62371118)</b>
+      <b> National Natural Science Foundation of China (General Program: 62371118)</b><br/>
         Research on Collaborative Situational Awareness and Energy Neutral Operation for Trustworthy Internet of Bodies, 2024.01-2027.12,  <b>PI</b><br/>
-      <b>National Natural Science Foundation of China (Young Scholar:61901104)</b>
+      <b>National Natural Science Foundation of China (Young Scholar: 61901104)</b><br/>
         Channel Characterization for Clutter Affected Low Altitude UAV-to-Vehicle Communications, 2020.01-2022.12,  <b>PI</b><br/>
-      <b>National Natural Science Foundation of China (General Program:62072096)</b>
+      <b>National Natural Science Foundation of China (General Program: 62072096)</b><br/>
         Computing, Communication, and Path Optimization for Edge Intelligence in the Internet of Vehicles, 2021.01-2024.12,  <b>Co-PI</b><br/>
       <b>上海市松江区科技攻关项目</b>(20SJKJGG4C): 基于软件无线电的Massive MIMO原型系统研究, 2020.9-2022.5, <b>主持</b><br/>
       <b>中央高校基本科研业务费专项资金自由探索项目</b>(19D110407): 面向5G动态场景下的电波传播感知与特性分析, 2019.01-2021.12, <b>主持</b><br/>
