--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
       · <b>Fundamental Research Funds for the Central Universities (19D110407)</b><br/>
         Radio Propagation Perception and Characterization for 5G Dynamic Scenarios, <b>PI</b><br/>
       · <b> NMD Science and Technology Commission Project (19-163-21-TS-001-014-01)</b><br/>
-        Research on reconfigurable integrated filter antennas for frequency and polarization, <b>Co-PI</b><br/>
-      · <b>Enterprise-commissioned Project(HX104220244)</b>:  Scattering Channel Modeling for Coast-ocean Senario, <b>PI</b><br/>
-      · <b>Enterprise-commissioned Project(HX104210835)</b>: Research on IoV Communication System based on SDR, <b>PI</b><br/></p>
+        Integrated Filter Antennas with Reconfigurable Frequency and Polarization, <b>Co-PI</b><br/>
+      · <b>Enterprise-commissioned Project (HX104220244)</b><br/>
+        Scattering Channel Modeling for Coast-ocean Senario, <b>PI</b><br/>
+      · <b>Enterprise-commissioned Project (HX104210835)</b><br/>
+        Research on IoV Communication System based on SDR, <b>PI</b><br/></p>
        </font></p>  
 
       <p align="left">
