--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         Channel Characterization for Clutter Affected Low Altitude UAV-to-Vehicle Communications, 2020.01-2022.12,  <b>PI</b><br/>
       · <b>National Natural Science Foundation of China (General Program: 62072096)</b><br/>
         Computing, Communication, and Path Optimization for Edge Intelligence in the Internet of Vehicles, 2021.01-2024.12,  <b>Co-PI</b><br/>
-      · <b>Science & Technology Research Project of Shanghai Songjiang District (20SJKJGG4C)</b><br/>
+      · <b>Science & Technology Research Project of Shanghai Songjiang (20SJKJGG4C)</b><br/>
         Research on Massive MIMO Prototype System based on Software-defined Radio <b>PI</b><br/>
       · <b>Fundamental Research Funds for the Central Universities (19D110407)</b><br/>
         Radio Propagation Perception and Characterization for 5G Dynamic Scenarios, <b>PI</b><br/>
