--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
         <font size="2">        
         2023 UCIC-SER Young Scientist Award<br/>
         2022 Entrepreneurship and Entrepreneurship Talent of Jiangsu Province <br/>
-        2021 G60 Science and Technology Innovation Corridor Outstanding Contribution Talent Team (PI)<br/>
+        2021 G60 Innovation Corridor Outstanding Contribution Talent Team (PI)<br/>
         2021 Gusu Leading talent <br/>
-        2023 Teaching Achievement Award of the China National Textile and Apparel Council (2nd Prize)<br/>
+        2023 Teaching Achievement Award of the China National Textile and Apparel Council<br/>
         2018 UPM Premio Extraordinarios de Doctorado <br/></p>
         </font></p>  
         
@@ -163,9 +163,8 @@
         [6] <b>L. Zhang</b>, P. Lin, K. Deng, G. Huang, J. Feng, “Joint Optimization of Energy and QoS for Smart Clothing with Multi-posture Participation,” <b><i>IEEE Sensors Journal</i></b>, vol. 22, no. 23, pp. 23529-23538, 2022. (<b>JCR Q1</b>)<br/>
         [7]	<b>L. Zhang</b>, J. Rodriguez Pineiro, J. R. O. Fernandez, J. A. Garcia-Naya, D. W. Matolak, C. Briso, L. Castedo, “Propagation Modeling for Outdoor-to-Indoor and Indoor-to-Indoor Wireless Links in High-speed Train,” <b><i>Measurement</i></b>, vol. 110, no., pp.43-52, 2017 (<b>JCR Q1</b>)<br/>
         [8]	<b>L. Zhang</b>, C. Briso, J.R.O. Fernandez, J.I. Alonso, C. Rodriguez, J. Moreno Garcia, K. Guan, “Delay Spread and Electromagnetic Reverberation in Subway Tunnels and Stations,” <b><i>IEEE Antennas and Wireless Propagation Letters</i></b>, vol. 15, no., pp.585-588, 2016 (<b>JCR Q1</b>)<br/>
-        [9]	M. Zhai, <b>L. Zhang*</b>, D. Li, “Efficient Modeling of Dispersive Media in Leapfrog WCS-FDTD Method,” <b><i>IEEE Microwave and Wireless Components Letters</i></b>, vol. 30, no. 3, pp. 225-228, 2020 (<b>JCR Q2</b>)<br/>
-        ...
-       <br>
+       ...
+          <br>
         A COMPLETE LIST: <a href="https://scholar.google.cz/citations?user=ShHxpioAAAAJ&hl=zh-CN"><i class="fa fa-fw fa-google"></i> Google Scholar</a> <br/>
 
         </font>
