--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       <p align="left">
         <b><font size="2">SERVICES </font></b><br>
         <font size="2">
-      <b>Academic Editor</b> for WCMC、FCN  </b><br/>
-      <b>Session Chair & TPC memeber</b> for IEEE ICEICT 22'、23' <br/>
+      <b>Academic Editor</b> for WCMC and FCN  </b><br/>
+      <b>Session Chair & TPC memeber</b> for IEEE ICEICT 22', 23' <br/>
       <b>Memember</b> of CIE, CTES, and IEEE <br/>
         </font></p>     
         
