--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
       <p align="left">
       <b> <font size="2"> HONORS AND AWARDS</font></b><br>
         <font size="2">
-        2023 Outstanding Young Talent of Shanghai (上海市东方英才) <br/>
+        2023 Outstanding Young Talent of Shanghai (上海市东方英才计划青年项目) <br/>
         2023 UCIC-SER Young Scientist Award<br/>
         2022 Entrepreneurship and Entrepreneurship Talent of Jiangsu Province (江苏省双创人才) <br/>
-        2021 G60 Innovation Corridor Outstanding Contribution Talent Team (PI)<br/>
+        2021 G60 Outstanding Contribution Talent Team (PI)<br/>
         2021 Gusu Leading Talent(姑苏领军人才) <br/>
-        2023 Teaching Achievement Award of the China National Textile and Apparel Council<br/>
+        2023 CNTAC Teaching Achievement Award Council<br/>
         2018 UPM Premio Extraordinarios de Doctorado <br/></p>
         </font></p>  
 
