--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         2022 Entrepreneurship and Entrepreneurship Talent of Jiangsu Province (江苏省双创人才) <br/>
         2021 G60 Outstanding Contribution Talent Team (PI)<br/>
         2021 Gusu Leading Talent(姑苏领军人才) <br/>
-        2023 CNTAC Teaching Achievement Award Council<br/>
-        2018 UPM Premio Extraordinarios de Doctorado <br/></p>
+        2023 CNTAC Teaching Achievement Award<br/>
+        2018 Premio Extraordinarios de Doctorado <br/></p>
         </font></p>  
 
       <p align="left">
