--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         2023 Outstanding Young Talent of Shanghai (上海市东方英才计划青年项目) <br/>
         2023 UCIC-SER Young Scientist Award<br/>
         2022 Entrepreneurship and Entrepreneurship Talent of Jiangsu Province (江苏省双创人才) <br/>
-        2021 G60 Outstanding Contribution Talent Team (PI)<br/>
+        2021 G60 Outstanding Contribution Talent<br/>
         2021 Gusu Leading Talent(姑苏领军人才) <br/>
         2023 CNTAC Teaching Achievement Award<br/>
         2018 Premio Extraordinarios de Doctorado <br/></p>
@@ -124,8 +124,9 @@
       <b><font size="2">SERVICES </font></b><br>
       <font size="2">
       <b>Academic Editor</b> for WCMC and FCN  </b><br/>
-      <b>Session Chair / TPC memeber</b> for IEEE ICEICT 22' & 23', EUCNC 24’<br/>
-      <b>Memember</b> of CIE, CTES, and IEEE <br/>
+      <b>Session Chair / TPC memeber</b> for <br/>
+      IEEE ICEICT 22' & 23', EUCNC 24’<br/>
+      IEEE, CIE, CTES <b>Memember</b>  <br/>
       </font></p> 
         
      <p align="left">
